--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -70,6 +70,7 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
   }
 }
 
@@ -80,8 +81,10 @@ body {
 @layer base {
   * {
     @apply border-border;
+    
   }
   body {
-    @apply bg-background text-[#166534] ;
+    @apply bg-background text-gray-400 ;
   }
+  
 }
